WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218771
[macCatalyst] Fix various build breaks
https://bugs.webkit.org/show_bug.cgi?id=218771
Summary
[macCatalyst] Fix various build breaks
Said Abou-Hallawa
Reported
2020-11-10 13:30:37 PST
For example
r269614
caused the following compilation error: ./editing/cocoa/DictionaryLookup.mm:249:31: error: no viable conversion from 'RefPtr<WebCore::NativeImage>' to 'RetainPtr<CGImageRef>' (aka 'RetainPtr<CGImage *>')
Attachments
Patch
(5.98 KB, patch)
2020-11-10 13:32 PST
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2020-11-10 13:32:06 PST
Created
attachment 413730
[details]
Patch
Tim Horton
Comment 2
2020-11-10 14:06:17 PST
Comment on
attachment 413730
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413730&action=review
> Source/WebKitLegacy/mac/WebView/WebPreferences.mm:2067 > -- (void)setAVKitEnabled:(bool)flag > +- (void)setAVKitEnabled:(BOOL)flag
What does the header say??
Said Abou-Hallawa
Comment 3
2020-11-10 14:29:49 PST
Comment on
attachment 413730
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413730&action=review
>> Source/WebKitLegacy/mac/WebView/WebPreferences.mm:2067 >> +- (void)setAVKitEnabled:(BOOL)flag > > What does the header say??
In Source/WebKitLegacy/mac/WebView/WebPreferencesPrivate.h, there is this definition: @property (nonatomic, getter=avKitEnabled) BOOL AVKitEnabled;
Ryan Haddad
Comment 4
2020-11-10 14:58:28 PST
rdar://71251933
EWS
Comment 5
2020-11-10 14:58:43 PST
Committed
r269648
: <
https://trac.webkit.org/changeset/269648
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413730
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug