[macCatalyst] Fix various build breaks https://bugs.webkit.org/show_bug.cgi?id=218771

Reviewed by Tim Horton.

Source/WebCore:

Use PlatformImagePtr which is encapsulated in NativeImage.

* editing/cocoa/DictionaryLookup.mm:
(-[WebRevealHighlight drawHighlightContentForItem:context:]):

Source/WebKit:

Use NO_RETURN_DUE_TO_ASSERT for unreachable function.

* UIProcess/Cocoa/UserMediaPermissionRequestProxy.mm:
(WebKit::UserMediaPermissionRequestProxy::doDefaultAction):
* UIProcess/UserMediaPermissionRequestProxy.h:

Source/WebKitLegacy/mac:

Use 'BOOL' instead of 'bool' for the functions arguments to resolve the
conflict with _setBoolValue which takes 'BOOL'.

* WebView/WebPreferences.mm:
(-[WebPreferences setAVKitEnabled:]):
(-[WebPreferences setNetworkDataUsageTrackingEnabled:]):


Canonical link: https://commits.webkit.org/231436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269648 268f45cc-cd09-0410-ab3c-d52691b4dbfc