Source/WebKit/UIProcess/UserMediaPermissionRequestProxy.h
@@ -48,8 +48,6 @@ public:
     enum class UserMediaAccessDenialReason { NoConstraints, UserMediaDisabled, NoCaptureDevices, InvalidConstraint, HardwareError, PermissionDenied, OtherFailure };
     void deny(UserMediaAccessDenialReason = UserMediaAccessDenialReason::UserMediaDisabled);
 
-    void doDefaultAction();
-
     void invalidate();
     bool isPending() const { return m_manager; }
 
@@ -89,6 +87,9 @@ public:
 
 #if ENABLE(MEDIA_STREAM)
     bool isUserGesturePriviledged() const { return m_request.isUserGesturePriviledged; }
+    void doDefaultAction();
+#else
+    NO_RETURN_DUE_TO_ASSERT void doDefaultAction();
 #endif
 
 private:
